fix: Incossitent spacing in sidebar (issue #95)

--- a/src/assets/styles/card-layout.css
+++ b/src/assets/styles/card-layout.css
@@ -72,7 +72,7 @@
   background: var(--primary-light);
 }
 
-.icon {
+.card_icon {
   font-size: 1.2em;
   margin-right: 0.5em;
 }
